Mon Feb 12 17:52:11 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po, po/vi.po: Update.

Mon Feb 12 17:44:48 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/debug.c: New file for debugging functions.
	* include/manconfig.h.in: debug -> debug_level; prototype debug and
	  debug_error.
	* lib/Makefile.in (ALL): Add debug.o.
	* Update all emissions of debugging messages to use the new
	  functions where possible; otherwise, debug -> debug_level.

Mon Feb 12 13:00:42 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (main): Change "No databases updated" to "No databases
	  created" now that we're no longer string-frozen.
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po, po/vi.po: Update.

Mon Feb 12 12:58:10 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* po/POTFILES.in: Add src/descriptions_store.c.
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po, po/vi.po: Update.

Mon Feb 12 12:42:44 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* man/es_ES.88591/man1/man.man1 (OPCIONES),
	  man/it_IT.88591/man1/man.man1 (OPZIONI),
	  man/ja_JP.eucJP/man1/man.man1 (オプション): Fix soft-hyphen
	  declarations to avoid error messages from groff.

Mon Feb 12 10:35:14 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.4.
	* configure.ac, docs/NEWS, man-db.lsm: Update.

Mon Feb 12 09:20:09 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (OPTIONS): Stop claiming that -d does not
	  display any manual pages (thanks, Dan Jacobson; Debian bug
	  #340910).

Mon Feb 12 09:04:17 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (main): Treat an empty LANGUAGE environment variable as